# borsa-alphavantage

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
examples/: showcase.rs
src/: adapter.rs  convert.rs  lib.rs
tests/: capabilities.rs  convert_earnings.rs  crypto_handling.rs  earnings_injection.rs  forex_handling.rs  history_injection.rs  history_validate.rs  interval_handling.rs  mapping.rs  quote_injection.rs  search_injection.rs  supported_intervals.rs  supports_kind.rs
